[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsorm"
version = "0.1.0"
description = ""
authors = [
    {name = "kajuberdut", email = "patrick.shechet@gmail.com"},
]
dependencies = [
    "databases>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}


[tool.pdm]
